# evfs

./: .gitignore  Cargo.toml  README.md  test_archive.arc
.github/WORKFLOWS/: build.yaml
src/: archive.rs  core.rs  enc_utils.rs  lib.rs  local.rs  local_encrypted.rs
