[package]
name = "evfs"
version = "0.1.0"
edition = "2024"
authors = ["Samith Sandanayake <samith@sansolue.com>"]
description = "A simple encryptable virtual file system abstraction for Rust"
license = "LGPL-2"

[dependencies]
aes-gcm = "0.10.3"

[features]
default = ["local", "archive", "enc", "local_enc"]
enc = []
local = []
archive = ["enc"]
local_enc = ["local", "enc"]
